--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 </head>
 
 <body id="main">
-
+    <h2>ColorWatch</h2>
+    <h4>The current time as color. A simple example of unit testing. View the code <a href="https://github.com/kyledodge/colorwatch">Here</a>.</h4>
     <div id="labelContainer">
-        <h2>ColorWATCH</h2>
-
         <div>
             <span class="label">Current Time:</span>
             <span id="clock"></span>
