Added built directory for reference

--- a/www-build/index.html
+++ b/www-build/index.html
@@ -25,10 +25,8 @@
             </div>
 
             <p>
-                Displaying the current time as a color. I built this to show an example of using RequireJS and unit testing with QUnit.
-                <br/><br/>
-                <a href="https://github.com/kyledodge/colorwatch"><button>Source</button></a>
-                <a href="./tests/"><button>Unit Tests</button></a>
+                Displaying the current time as a color. I built this to show an example of using RequireJS and unit testing with QUnit. You can
+                View the <a href="https://github.com/kyledodge/colorwatch">code on Github</a>.
             </p>
 
             <p>
